--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.3",
     "web-vitals": "^2.1.4"
